[package]
name = "pegasus"
version = "1.0.0"
authors = [
  "Maurits Bos <mb.brains@gmail.com>",
  "Josef Leventon <josef.leventon@gmail.com>",
]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = { version = "1.0.0" }
cosmwasm-storage = { version = "1.0.0" }
cw-storage-plus = "0.13.4"
cw2 = "0.13.4"
cw20 = "0.13.4"
cw721 = "0.13.4"
cw721-base = { version = "0.13.4", features = ["library"] }
schemars = "0.8.8"
serde = { version = "1.0.133", default-features = false, features = ["derive"] }
sg721 = { version = "0.12.0", features = ["library"] }
thiserror = { version = "1.0.30" }
sg-std = "0.12.1"
cw-utils = "0.13.4"
sg1 = "0.14.0"
sg-controllers = "0.12.1"
semver = "1.0.14"


[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.4"
sg-multi-test = "0.14.0"
